# JavasAgent

./: .gitignore  LICENSE  README.md  _test_hh02.py  _test_hh05.py  _test_pf06.py  _test_pf09.py  _test_pf10.py  _test_tl03.py  _test_tl06.py  fix_quotes.ps1  pyproject.toml  pytest_out.txt  test_full.txt  test_full2.txt  test_out.txt  test_real_pc02.py  test_results.txt
config/: default.yaml
docs/: api-reference.md  architecture.md  contributing.md  dev-plan.md  getting-started.md  plan-background-service.md  plan-documentation.md  plan-skill-system.md  plan-voice-assistant.md  skill-authoring-guide.md  tech-stack.md  tr-background-service.md  tr-skill-system.md  troubleshooting.md  user-guide.md  voice-guide.md
scripts/: JavasAgent-Introduction.pptx  create_ppt.py  find_input.py  input_task.py  input_task_v10.py  input_task_v11.py  input_task_v12.py  input_task_v2.py  input_task_v3.py  input_task_v4.py  input_task_v5.py  input_task_v6.py  input_task_v7.py  input_task_v8.py  input_task_v9.py  install.ps1  install.sh  list_windows.py  real_test_hh03_hh04.py
skills/: readme.md
skills/browser/: browser_bookmark.yaml  browser_download.yaml  browser_open_url.yaml  browser_search.yaml
skills/dev/: git_commit_push.yaml  terminal_run.yaml  vscode_open_project.yaml
skills/office/: excel_format_table.yaml  notepad_edit.yaml  ppt_export_images.yaml  word_save_pdf.yaml
specs/: core-engine.spec.md
src/: __init__.py  main.py
test-evidence/: test-cases.md  test-plan.md  test-report.md
tests/: conftest.py  test_cli.py  test_cli_voice.py  test_integration.py
(+298 files in other folders)
