[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "javas-agent"
version = "0.1.0"
description = "像贾维斯一样的AI智能体，接管你的电脑"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "JavasAgent Team" },
]

dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pyautogui>=0.9",
    "pillow>=10.0",
    "chromadb>=0.4",
    "openai>=1.0",
    "zhipuai>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "watchdog>=4.0",
    "psutil>=5.9",
    "winotify>=1.1; sys_platform == 'win32'",
    "pystray>=0.19",
    "keyboard>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
javas = "src.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
